--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2708,107 +2708,107 @@ stories:
   domain: http://www.thevillager.com/
   link: https://www.thevillager.com/2019/06/kendall-jenner-and-kim-kardashian-love-rays-candy-store/
 images:
-- name: locked-up-steam-lock-up-steam-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crafty-painting.jpg
-- name: rockingchair-rockingchair-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-nazi-poster.jpg
-- name: berlinwall-DSC-0084-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purp-paper.jpg
-- name: aws-s3-canyon-canyon-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-1200.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-- name: bluelake-clean-view-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-01-17-38.jpg
-- name: beach-clouds-lifeguard-beachclouds-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-rainbow-festival.jpg
-- name: sand-hand-sand-hand-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-dali.jpg
-- name: status-berlin-status-berlin-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-dys-1.jpg
-- name: beach-rocks-beach-rocks-currents-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crafty-painting.jpg
-- name: dragon-desert-desert-dragon-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-collage.jpg
-- name: meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
-- name: mediterranean-mediterranean.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-jap-dys-1.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
-- name: capital-battle-capitolbattle-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-pablo-blue.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
-- name: art-museum-art-museum-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-alien-goggles.jpg
-- name: server-cloud-server-racks-door-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-monet-one.jpg
-- name: crow_colorful_dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
-- name: server-cloud-server-racks-door-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-4.jpg
-- name: blossombar-blossombar-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still.jpg
-- name: lincoln-memorial-lincolnmemorial-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-brush.jpg
-- name: containership-containership-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-4.jpg
-- name: powerlines-power-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-graham-sutherland.jpg
-- name: cyber-api-description-wars-mosaic-face-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-mosaic-face-internet-numbers.jpg
-- name: oldroad-old-road-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dry-skin.jpg
-- name: beach-rocks-beach-rocks-currents-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-storm.jpg
-- name: yuma-bank-yuma-bak-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
-- name: rain-princess-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0001.jpg
-- name: server-cloud-server-racks-clouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
-- name: border-crossing-bordercrossing-marcel-duchamp.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-marcel-duchamp.png
-- name: oldhousecars-house-old-cars-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kand-two.jpg
-- name: status-berlin-status-berlin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
-- name: curtain-curtain-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-deep-connections.jpg
-- name: abandonedbuildings_sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sunday.jpg
-- name: eduardo-eduardo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-dali.jpg
-- name: mistywoods-babyfoot-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-mucha-mult.jpg
-- name: berlinwall2-berlinwall-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-collage.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: old-granary-field-granaryfield-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-ww2-color.jpg
-- name: downtown-los-angeles-downtown-la-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
-- name: berlinwall-DSC-0084-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dry-skin.jpg
-- name: gears-4882162452-fa3126b38d-b-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-pablo-blue.jpg
-- name: window-window-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-light-dali.jpg
-- name: copper-circuit-DSC_0044-001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0044-001.jpg
-- name: dragon-desert-desert-dragon-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colored-circuits.jpg
-- name: old-house-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-electricity.jpg
-- name: oldhousecars-house-old-cars-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-internet-numbers.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+- name: dc-statue-dcstatue-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-circuit.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
+- name: old-granary-field-granaryfield-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-spagetti-accident.jpg
+- name: razorwire-DSC-0080-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-dali.jpg
+- name: mediterranean-mediterranean-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crunch-paper.jpg
+- name: sand-hand-sand-hand-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dry-skin.jpg
+- name: downtown-trucksilo-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-granite.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-3.jpg
+- name: curtain-curtain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-kandinsky-bv.jpg
+- name: death-valley-death-valley-national-park-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
+- name: oldtrain-oldtrain-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alberto-giacometti.jpg
+- name: server-cloud-server-racks-door-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit.jpg
+- name: yosemite-yosemite-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
+- name: old-cabin-oldcabin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-aqua.jpg
+- name: aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
+- name: paris-paris-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-atari-asteroids.jpg
+- name: stories-new-80-87-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-87-800-500-0-max-0--1--1.jpg
+- name: flower-barbed-wire-flower-barbed-wire-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-free-woman.jpg
+- name: locked-up-steam-lock-up-steam-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-copper-circuit.jpg
+- name: power-lines-power-lines-empty-space-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-dream.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+- name: abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
+- name: death-valley-death-valley-national-park-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-atari-missle.jpg
+- name: fence-fence-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crunch-paper.jpg
+- name: blossombar-sunday-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-00-00.jpg
+- name: powerlines-power-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
+- name: downtheline-downtheline-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-asteroids.jpg
+- name: docks-docks-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-creativity.jpg
+- name: beach-rocks-beach-rocks-currents-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-emily-carr.jpg
+- name: oldhouse-granaryfield-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-dali.jpg
+- name: power-lines-power-lines-empty-space-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
+- name: bluelake-neo-instinct-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-00-00.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
+- name: gypsymosaic-gypsy-eyes-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-smooth-ride.jpg
+- name: razorwire-DSC-0080-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-deep-connections.jpg
+- name: san-francisco-street-view-san-francisco-street-view-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-nazi-poster.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-dys-1.jpg
+- name: downtheline-downtheline-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-diego-rivera1.jpg
+- name: art-museum-art-museum-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-mucha-mult.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-bright-sand.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-bright-sand.JPG
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
+- name: old-door-lock-old-door-lock-2-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-hot-spicy.jpg
+- name: white-house-lawn-white-house-window-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purp-paper.jpg
+- name: copper-circuit-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7162.jpg
+- name: window-window-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purp-paper.jpg
+- name: mistywoods-babyfoot-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-plentiful.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+- name: los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
+- name: server-cloud-server-racks-clouds-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-horiz-circuit.jpg
+- name: berlinwall-DSC-0084-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gred-mash.jpg
+- name: sand-hand-sand-hand-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit.jpg
 ---
 Burnside Remarks On Hike And Bike Trail Ribbon Cutting.&nbsp;Man Charged With Online Threat To Lynch Muslim Candidate.&nbsp;Possibilities For New Township Buildings.&nbsp;Bryzos Is Your Place For All Things Steel.&nbsp;Let Them Eat Toast.&nbsp;Training Rides Begin For Martindales Mamma Jamma Fundraiser.&nbsp;Madrid Region Wildfire Still Burns Out Of Control On 4th Day.&nbsp;Rotarians Continue To Assist In The Haiti Project.&nbsp;
